feat: Agregar Movil Estudiante Profesor y arreglar mensajes de error